# llmgameframework

./: .gitignore  AUTHORING.md  DECISIONS.md  GENERATION_READINESS_PLAN.md  GENERATION_TEST.md  PHASE5_CORE_GAPS.md  PLAN.MD  PLAN.md  README.md  pyproject.toml
docs/: AGENT_GAME_AUTHORING.md  AGENT_PROMPT_TEMPLATE.md  game-authoring-agent-guide.md
examples/: run_openrouter_split_or_steal.py  run_openrouter_two_models_split_or_steal.py  run_split_or_steal.py
llmgames/: __init__.py  assistance.py  clock.py  llm.py  models.py  replay.py  responders.py  rules.py  runtime.py  storage.py  testing.py  validation.py  web.py
llmgames/core/: __init__.py  authoring.py  contracts.py  controllers.py  engine.py  events.py  messaging.py  schemas.py  tracing.py  validation.py  views.py
llmgames/games/: __init__.py  complex_orders.py  hanabi_lite.py  split_or_steal.py  tic_tac_toe.py
llmgames/llm/: __init__.py  controller.py  openrouter.py  parsing.py  prompts.py  provider.py
tests/: test_assistance.py  test_authoring.py  test_complex_orders.py  test_core_helpers.py  test_generation_readiness.py  test_hanabi_lite.py  test_llm_controller.py  test_llm_provider.py  test_replay_tic_tac_toe.py  test_responders.py  test_runtime_hardening.py  test_runtime_tic_tac_toe.py  test_runtime_timers.py  test_split_or_steal.py  test_split_or_steal_runtime.py  test_storage.py  test_tic_tac_toe_validation.py  test_tracing.py  test_validation_diagnostics.py  test_web.py
