[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "llmgames"
version = "0.1.0"
description = "A tiny framework for turn-based games played by scripted or LLM controllers."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["llmgames*"]
