[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmgames"
version = "0.0.0"
description = "Verifiable interaction runtime for games played by humans, LLMs, and scripts."
readme = "PLAN.md"
requires-python = ">=3.11"
dependencies = [
    "deepdiff>=7.0",
    "fastapi>=0.110",
    "httpx>=0.27",
    "jsonschema>=4.0",
    "pydantic>=2.0",
    "sse-starlette>=2.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
test = [
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
